Update java command for scouter server